Sun Jun 10 14:19:33 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: NetBSD 6 adds libexecinfo but it only works on amd64.
	  http://www.mail-archive.com/source-changes-full@netbsd.org/msg38729.html

Sun Jun 10 12:43:23 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_f_exec): call rb_exec_async_signal_safe except on
	  Mac OS X.  cf. the comment in before_exec_non_async_signal_safe.

Sun Jun 10 12:15:18 2012  Tanaka Akira  <akr@fsij.org>

	* io.c (popen_exec): don't call rb_thread_atfork_before_exec.  use
	  rb_exec_async_signal_safe instead of rb_exec_err.
	  (pipe_open): use rb_fork_async_signal_safe instead of rb_fork_err.

Sun Jun 10 11:44:57 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_fork_internal): call after_fork only unless
	  chfunc_is_async_signal_safe.

Sun Jun 10 11:33:01 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_pkey_ec.c
	  test/openssl/test_pkey_ec.rb: Add support for EC_POINT_mul.
	  Patch provided by Sambasiva Suda. Thanks!
	  [ruby-core:44408][ruby-trunk - Feature #6310]

Sun Jun 10 10:48:15 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* lib/openssl/ssl.rb: Use a simple random number to generate the
	  session id. MD5, as was used before, causes problems when
	  using a FIPS version of OpenSSL. Issue was found by Jared
	  Jennings, thank you!
	  [ruby-trunk - Bug #6137]

Sun Jun 10 10:27:34 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* NEWS: Add note about the new private key export behavior.

Sun Jun 10 10:24:51 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_exec_async_signal_safe): exported.

	* ext/pty/extconf.rb: modify $INCFLAGS to include internal.h

	* ext/pty/pty.c: include internal.h.
	  (chfunc): don't call rb_thread_atfork_before_exec.  use
	  rb_exec_async_signal_safe instead of rb_f_exec.
	  (establishShell): set up earg.  use rb_fork_async_signal_safe
	  instead of rb_fork_err.

	* internal.h (rb_exec_async_signal_safe): declared.